Fixed wallpaper not showing and added inline JavaScript to fix navbar in HTML

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -568,7 +568,7 @@ body:before {
   width: 100%;
   height: 100%;
   z-index: auto;
-  background: url(../img/wall.jpg) no-repeat center center;
+  background: url(../img/web.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
